# webtraversallibrary

./: .buildinfo  .bumpversion.cfg  .gitignore  .jshintrc  .pylintrc  .readthedocs.yml  CHANGELOG.md  MANIFEST.in  Makefile  NOTICE  README.md  environment.txt  examples.html  genindex.html  gettingstarted.html  index.html  index.md  objects.inv  package-lock.json  package.json  py-modindex.html  pyproject.toml  pytest.ini  references_main.html  references_other.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test
.github/: dependabot.yml
_modules/: index.html
_sources/: examples.rst.txt  gettingstarted.md.txt  references_main.rst.txt
docs/: Makefile  conf.py  examples.sh  index.rst  references_other.rst  requirements.txt
examples/: dataguy_by_element.py  dementor.py  dynamic_windows.py  fill_form.py  gui.py  hard_coded.py  href_scorer.py  interactive.py  largest_image.py  monkeypatch.py  multiples.py  random_dataguy.py  random_dataguy_memory.py  random_traversal.py  size_scorer.py  stopwords.txt  tictactoe.py  util.py  view_classifier.py  wiki_game.py  without_workflow.py  zindex.py
tests/: actions_test.py  app_info_test.py  classifiers_test.py  color_test.py  config_test.py  driver_check_test.py  elements_test.py  error_test.py  geometry_test.py  goals_test.py  graphics_test.py  helpers_test.py  javascript_test.py  mhtml_test.py  page_element_test.py  page_snapshot_test.py  policies_test.py  processtools_test.py  scraper_test.py  screenshot_test.py  selectors_test.py  snapshot_test.py  system_test.py  version_check_test.py  view_test.py  window_test.py  workflow_test.py
webtraversallibrary/: __init__.py  actions.py  app_info.py  browser.py  color.py  (+21 more)
(+90 files in other folders)
