[metadata]
name = webtraversallibrary
description = Abstractions of web interactions
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/klarna-incubator/webtraversallibrary
author = Klarna Bank AB
author_email = naslundx@gmail.com,
license = Apache Software License
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
project_urls = 
    Documentation = https://webtraversallibrary.readthedocs.io
    Source = https://github.com/klarna-incubator/webtraversallibrary
    Tracker = https://github.com/klarna-incubator/webtraversallibrary/issues

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
python_requires = >=3.7
setup_requires =
    beautifulsoup4>=4.8
    html5lib>=1.0.1
    pillow>=7.1
    requests>=2.24
    selenium>=3.141
    soupsieve>=2.0
    tld
    urllib3
    prodict>=0.8

[options.extras_require]
test =
    pylint
    pytest >= 6.2.2
    black
    mypy
all =
    %(test)s

[coverage:run]
branch = True
omit = */__init__.py

[mypy]
python_version = 3.7
ignore_missing_imports = True
follow_imports_for_stubs = True
show_column_numbers = True
scripts_are_modules = True
no_implicit_optional = False
strict_optional = False
warn_unused_configs = True
warn_unused_ignores = False
